
	* TreeView.cs: Set the default border style in the constructor.
	- Move painting to use OnPaintInternal instead of capturing
	WM_PAINT, this is the correct way of doing things
	- UpdateBelow shouldn't invalidate the scrollbar area
	- Cap the top on update below in case the node was above the top
	of the viewport rectangle.
	- ExpandBelow and Collapse below need to obey Begin/End Update.

2006-06-01  Peter Dennis Bartok  <pbartok@novell.com> 

	* XplatUIX11.cs (SetFocus): Make sure we can handle re-entrancy due to
	  SendMessage directly calling window procedures, which in turn might
	  call SetFocus()

2006-06-01  Peter Dennis Bartok  <pbartok@novell.com>

	* Control.cs: Don't handle WM_SETFOCUS if the same window already
	  has focus (works around X11 sending a FocusIn after our SetFocus)
	* XplatUIX11.cs: Send KILLFOCUS before setting SETFOCUS on new window

2006-06-01  Alexander Olk  <alex.olk@googlemail.com>

	* Mime.cs: Fix for the NET_2_0 build.
	  NameValueCollection needs StringComparer now.

2006-05-31  Chris Toshok  <toshok@ximian.com>

	* DataGridDrawingLogic.cs (FromPixelToColumn): modify this to also
	return (via an out parameter) the starting X of the column.
	(UpdateVisibleColumn): track change to FromPixelToColumn.
	(HitTest): add a ColumnResize case here.
	(DrawResizeLine): new function, probably poorly named.

	* DataGrid.cs (.ctor): get rid of cached_currencymgr_events.  We
	only need to keep one reference.
	(set_ListManager): same.
	(OnMouseDown): call HitTest instead of grid_drawing.HitTest.
	Also, add support for HitTestType.ColumnResize.
	(OnMouseMove): add column resize behavior here, and change the
	cursor to the correct one as we move around the datagrid.
	(OnMouseUp): terminate the column resize if we're resizing.
	(ProcessGridKey): from the MS docs, Alt-0 enters the null value
	for the current cell.
	(ConnectListManagerEvents): use cached_currencymgr.
	(DisconnectListManagerEvents): fill this in, using
	cached_currencymgr.